Bug 351782 - Can't select files in Kompare.
Summary: Can't select files in Kompare.
Status: RESOLVED FIXED
Alias: None
Product: kompare
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1.3
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Kompare bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-26 07:03 UTC by Yamashita Ren
Modified: 2016-05-27 10:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A patch submitted in the Archlinux bugreport. (549 bytes, patch)
2015-08-26 07:07 UTC, Yamashita Ren
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yamashita Ren 2015-08-26 07:03:06 UTC
When you open Kompare, in the "Files" tab, you can only select directories.
Archlinux bug : https://bugs.archlinux.org/task/44646

Reproducible: Always

Steps to Reproduce:
1. Open Kompare.
2. Go to "Files" tab.
3. Open the embeded file manager.

Actual Results:  
Only directories can be listed. You can't select fies.

Expected Results:  
You want directories and files listed. You want to select files.

Workaround is to use the command line :
kompare file1.txt file2.txt
Comment 1 Yamashita Ren 2015-08-26 07:07:23 UTC
Created attachment 94218 [details]
A patch submitted in the Archlinux bugreport.

Works according to the patch's author.
Comment 2 Jeremy Whiting 2015-08-27 02:12:22 UTC
Git commit 5ddaf63d1a7ee24b3fe8a4d102b192d40c4c7fc9 by Jeremy Whiting.
Committed on 27/08/2015 at 02:11.
Pushed by whiting into branch 'Applications/15.08'.

Allow selecting both files and folders in kompare's inital dialog.

M  +2    -2    main.cpp

http://commits.kde.org/kompare/5ddaf63d1a7ee24b3fe8a4d102b192d40c4c7fc9
Comment 3 Jeremy Whiting 2015-08-27 02:14:27 UTC
Fixed. Thanks a lot for sending the patch.
Comment 4 Wolfgang Bauer 2016-05-25 16:23:08 UTC
I just noticed that the fix prevents selecting directories at all now...
Comment 5 Kevin Kofler 2016-05-27 10:55:47 UTC
You shouldn't be able to select directories. Kompare used to just crash if you tried to compare directories.