Allow selecting both files and folders in kompare's inital dialog.

BUG:351782